--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "mongoose": "^6.0.2",
-    "multer": "^1.4.3"
+    "multer": "^1.4.3",
+    "socket.io": "^4.2.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.12"
