--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Gabriel López",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^6.0.2",
     "multer": "^1.4.3",
